REGRESSION(r236662): Fix -Wformat warnings in CacheStorageEngineCaches.cpp https://bugs.webkit.org/show_bug.cgi?id=190205

Reviewed by Chris Dumez.

Passing enums to %d is not kosher, at least not according to GCC's -Wformat. Avoid it.

* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::Caches::initialize):
(WebKit::CacheStorage::Caches::readCachesFromDisk):
(WebKit::CacheStorage::Caches::writeCachesToDisk):


Canonical link: https://commits.webkit.org/205159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236749 268f45cc-cd09-0410-ab3c-d52691b4dbfc